<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.allikalli.bagg.OpnunActivity"
    android:background="#9a39c1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/attention"
        android:contentDescription="@string/shieldimagedescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:onClick="relapse" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textTitleRelapseScreen"
        android:id="@+id/textView"
        android:layout_marginTop="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textQuoteRelapseScreen"
        android:id="@+id/textView2"
        android:layout_marginBottom="79dp"
        android:layout_above="@+id/beginButton"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonGoBack"
        android:id="@+id/beginButton"
        android:onClick="tilMain"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:width="150dp"
        android:background="#945986" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textAuthorReplaseScreen"
        android:id="@+id/textView10"
        android:layout_above="@+id/beginButton"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="35dp" />

</RelativeLayout>
