<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.allikalli.bagg.OpnunActivity"
    android:background="#9a39c1"
    android:focusableInTouchMode="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoScreenText1"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoScreenText2"
        android:id="@+id/textView3"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarHitsPerDay"
        android:layout_marginTop="28dp"
        android:progress="5"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1"
        android:id="@+id/textViewHitsPerDay"
        android:layout_alignTop="@+id/seekBarHitsPerDay"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoScreenText3"
        android:id="@+id/textView6"
        android:layout_below="@+id/seekBarHitsPerDay"
        android:layout_alignLeft="@+id/seekBarHitsPerDay"
        android:layout_alignStart="@+id/seekBarHitsPerDay"
        android:layout_marginTop="22dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarDaysPerCan"
        android:progress="23"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignRight="@+id/seekBarHitsPerDay"
        android:layout_alignEnd="@+id/seekBarHitsPerDay"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="14"
        android:id="@+id/textViewDaysPerCan"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textViewHitsPerDay"
        android:layout_alignStart="@+id/textViewHitsPerDay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoScreenText4"
        android:id="@+id/textView8"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/seekBarDaysPerCan"
        android:layout_alignLeft="@+id/seekBarDaysPerCan"
        android:layout_alignStart="@+id/seekBarDaysPerCan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoScreenText5"
        android:id="@+id/textView9"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/seekBarDaysPerCan"
        android:layout_alignStart="@+id/seekBarDaysPerCan" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPriceOfCan"
        android:width="150dp"
        android:text="2500"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoScreenButton"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:onClick="enter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:text="2"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/editTextPriceOfCan"
        android:layout_alignStart="@+id/editTextPriceOfCan"
        android:layout_alignRight="@+id/editTextPriceOfCan"
        android:layout_alignEnd="@+id/editTextPriceOfCan" />

</RelativeLayout>
